Add comprehensive documentation and GitHub release notes
 Added:
- GITHUB_RELEASE_NOTES.md - Detailed v1.0.0 release documentation
- Updated .gitignore - Exclude embedded repositories and sensitive files

 Documentation includes:
- Production metrics (14 real assets, 197K+ records)
- Technical architecture and security features
- Quick start guide and installation instructions
- Performance benchmarks and enterprise features
- Professional release notes for GitHub publication

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,11 @@ dmypy.json
 local_*
 test_*
 debug_*
+
+# Embedded repositories (exclude from main project)
+btp-sap-odata-to-mcp-server/
+odata_mcp/
+odata_mcp_go/
+sap-datasphere-mcp-server/
+sap-datasphere-mcp/
+datasphere-control-panel/
