--- a/requirements.txt
+++ b/requirements.txt
@@ -3,31 +3,8 @@
 # MCP Framework
 mcp>=1.0.0
 
-# Web Framework
-fastapi>=0.104.0
-uvicorn>=0.24.0
-
-# HTTP and Authentication
+# HTTP requests for SAP API
 requests>=2.31.0
-httpx>=0.25.0
 
-# AWS Integration
-boto3>=1.34.0
-botocore>=1.34.0
-
-# Data Validation and Serialization
-pydantic>=2.5.0
-
-# Logging and Monitoring
-loguru>=0.7.0
-
-# Async Support
-asyncio-mqtt>=0.13.0
-
-# Development and Testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-
-# Optional: For enhanced features
-pandas>=2.1.0
-numpy>=1.24.0
+# Standard library enhancements
+python-dateutil>=2.8.0
