--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mariodefe/sap-datasphere-mcp",
-  "version": "1.0.13",
-  "description": "Model Context Protocol server for SAP Datasphere integration with 51 tools including Table Monitoring, Instant Data Access, Task Management, and Smart Query",
+  "version": "1.0.12",
+  "description": "Model Context Protocol server for SAP Datasphere integration with 48 tools including Task Management (run_task_chain, get_task_log, get_task_history) and Smart Query",
   "keywords": [
     "sap",
     "datasphere",
